--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -732,13 +732,16 @@ video {
   left: 0px;
 }
 
-<<<<<<< Updated upstream
-.left-2 {
-  left: 0.5rem;
-=======
 .left-1 {
   left: 0.25rem;
->>>>>>> Stashed changes
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.left-5 {
+  left: 1.25rem;
 }
 
 .right-0 {
@@ -747,6 +750,10 @@ video {
 
 .right-2 {
   right: 0.5rem;
+}
+
+.right-80 {
+  right: 20rem;
 }
 
 .top-0 {
@@ -761,29 +768,10 @@ video {
   top: 0.75rem;
 }
 
-<<<<<<< Updated upstream
-=======
 .top-5 {
   top: 1.25rem;
 }
 
-.left-5 {
-  left: 1.25rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-80 {
-  right: 20rem;
-}
-
-.right-72 {
-  right: 18rem;
-}
-
->>>>>>> Stashed changes
 .-z-10 {
   z-index: -10;
 }
@@ -819,23 +807,16 @@ video {
   margin-bottom: 1.25rem;
 }
 
-<<<<<<< Updated upstream
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-=======
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.my-6 {
-  margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
@@ -847,7 +828,6 @@ video {
   margin-right: 2rem;
 }
 
->>>>>>> Stashed changes
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -860,13 +840,8 @@ video {
   margin-top: 3.5rem;
 }
 
-<<<<<<< Updated upstream
 .mt-5 {
   margin-top: 1.25rem;
-=======
-.ml-10 {
-  margin-left: 2.5rem;
->>>>>>> Stashed changes
 }
 
 .block {
@@ -909,13 +884,12 @@ video {
   height: 7rem;
 }
 
-<<<<<<< Updated upstream
 .h-48 {
   height: 12rem;
-=======
+}
+
 .h-8 {
   height: 2rem;
->>>>>>> Stashed changes
 }
 
 .h-\[\.2rem\] {
@@ -924,25 +898,6 @@ video {
 
 .h-\[0\.05rem\] {
   height: 0.05rem;
-<<<<<<< Updated upstream
-=======
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.w-1\/2 {
-  width: 50%;
->>>>>>> Stashed changes
 }
 
 .h-\[60vh\] {
@@ -958,6 +913,10 @@ video {
   height: 100vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -970,7 +929,6 @@ video {
   width: 20%;
 }
 
-<<<<<<< Updated upstream
 .w-10 {
   width: 2.5rem;
 }
@@ -983,8 +941,6 @@ video {
   width: 4rem;
 }
 
-=======
->>>>>>> Stashed changes
 .w-2 {
   width: 0.5rem;
 }
@@ -995,6 +951,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-3\/5 {
@@ -1013,24 +973,20 @@ video {
   width: 1.25rem;
 }
 
-<<<<<<< Updated upstream
 .w-6 {
   width: 1.5rem;
 }
 
-=======
->>>>>>> Stashed changes
 .w-7 {
   width: 1.75rem;
 }
 
-<<<<<<< Updated upstream
-.w-9 {
-  width: 2.25rem;
-=======
 .w-8 {
   width: 2rem;
->>>>>>> Stashed changes
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .w-full {
@@ -1042,37 +998,8 @@ video {
   width: max-content;
 }
 
-<<<<<<< Updated upstream
 .max-w-xl {
   max-width: 36rem;
-=======
-.w-20 {
-  width: 5rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-11 {
-  width: 2.75rem;
->>>>>>> Stashed changes
 }
 
 .origin-\[0\] {
@@ -1084,18 +1011,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-<<<<<<< Updated upstream
-.-translate-y-6 {
-  --tw-translate-y: -1.5rem;
-=======
 .-translate-y-4 {
   --tw-translate-y: -1rem;
->>>>>>> Stashed changes
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-3 {
-  --tw-translate-y: 0.75rem;
+.-translate-y-6 {
+  --tw-translate-y: -1.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1146,10 +1068,6 @@ video {
   flex-direction: column;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
 }
@@ -1174,7 +1092,10 @@ video {
   gap: 1.75rem;
 }
 
-<<<<<<< Updated upstream
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+
 .gap-y-4 {
   row-gap: 1rem;
 }
@@ -1183,41 +1104,18 @@ video {
   row-gap: 1.5rem;
 }
 
-.gap-y-2 {
-  row-gap: 0.5rem;
-=======
-.gap-9 {
-  gap: 2.25rem;
-}
-
-.gap-32 {
-  gap: 8rem;
-}
-
-.gap-20 {
-  gap: 5rem;
->>>>>>> Stashed changes
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-<<<<<<< Updated upstream
 .space-x-20 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(5rem * var(--tw-space-x-reverse));
   margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-=======
->>>>>>> Stashed changes
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1230,7 +1128,6 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-<<<<<<< Updated upstream
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -1282,8 +1179,6 @@ video {
   overflow-y: auto;
 }
 
-=======
->>>>>>> Stashed changes
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1300,17 +1195,8 @@ video {
   border-radius: 0.375rem;
 }
 
-<<<<<<< Updated upstream
 .rounded-xl {
   border-radius: 0.75rem;
-=======
-.rounded-bl-md {
-  border-bottom-left-radius: 0.375rem;
-}
-
-.rounded-br-md {
-  border-bottom-right-radius: 0.375rem;
->>>>>>> Stashed changes
 }
 
 .rounded-tl-md {
@@ -1333,21 +1219,8 @@ video {
   border-width: 2px;
 }
 
-<<<<<<< Updated upstream
 .border-l-2 {
   border-left-width: 2px;
-=======
-.border-r {
-  border-right-width: 1px;
-}
-
-.border-r-4 {
-  border-right-width: 4px;
-}
-
-.border-r-8 {
-  border-right-width: 8px;
->>>>>>> Stashed changes
 }
 
 .border-\[\#F2F2F2\] {
@@ -1358,14 +1231,11 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-<<<<<<< Updated upstream
 }
 
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
-=======
->>>>>>> Stashed changes
 }
 
 .border-slate-300 {
@@ -1382,12 +1252,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-<<<<<<< Updated upstream
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .border-l-gray-200 {
   --tw-border-opacity: 1;
   border-left-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1398,8 +1262,6 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-=======
->>>>>>> Stashed changes
 .bg-gray-900\/80 {
   background-color: rgb(17 24 39 / 0.8);
 }
@@ -1432,7 +1294,6 @@ video {
   background-color: rgb(255 255 255 / 0.7);
 }
 
-<<<<<<< Updated upstream
 .p-3 {
   padding: 0.75rem;
 }
@@ -1451,42 +1312,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-=======
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-purple-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#BDC3E4\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(189 195 228 / var(--tw-bg-opacity));
-}
-
-.bg-\[purple-700\] {
-  background-color: purple-700;
-}
-
-.bg-\[\#FED9A5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 217 165 / var(--tw-bg-opacity));
-}
-
-.p-24 {
-  padding: 6rem;
-}
-
-.p-12 {
-  padding: 3rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
->>>>>>> Stashed changes
 }
 
 .px-0 {
@@ -1494,7 +1319,6 @@ video {
   padding-right: 0px;
 }
 
-<<<<<<< Updated upstream
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1503,16 +1327,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-=======
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .px-2\.5 {
   padding-left: 0.625rem;
   padding-right: 0.625rem;
->>>>>>> Stashed changes
 }
 
 .px-3 {
@@ -1540,24 +1359,25 @@ video {
   padding-bottom: 1rem;
 }
 
-<<<<<<< Updated upstream
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
-=======
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
->>>>>>> Stashed changes
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
-<<<<<<< Updated upstream
+.pb-2\.5 {
+  padding-bottom: 0.625rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
 .pl-2 {
@@ -1566,43 +1386,26 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-=======
-.pb-2\.5 {
-  padding-bottom: 0.625rem;
->>>>>>> Stashed changes
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .pt-3 {
   padding-top: 0.75rem;
 }
 
-<<<<<<< Updated upstream
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
 .text-center {
   text-align: center;
-=======
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
->>>>>>> Stashed changes
 }
 
 .font-nunito {
@@ -1615,10 +1418,6 @@ video {
 
 .font-pt {
   font-family: 'PT Sans', sans-serif;
-}
-
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-2xl {
@@ -1665,16 +1464,6 @@ video {
   line-height: 1rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1683,12 +1472,12 @@ video {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-\[\#0B8826\] {
@@ -1726,14 +1515,11 @@ video {
   color: rgb(242 242 242 / var(--tw-text-opacity));
 }
 
-<<<<<<< Updated upstream
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-=======
->>>>>>> Stashed changes
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1742,7 +1528,6 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-<<<<<<< Updated upstream
 }
 
 .text-primColor {
@@ -1767,33 +1552,11 @@ video {
 
 .text-textColor\/70 {
   color: rgb(27 27 27 / 0.7);
-=======
->>>>>>> Stashed changes
-}
-
-.text-primColor {
-  --tw-text-opacity: 1;
-  color: rgb(56 74 173 / var(--tw-text-opacity));
-}
-
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
 }
 
 .placeholder-slate-400::-moz-placeholder {
@@ -1911,10 +1674,6 @@ video {
   background-color: rgb(56 74 173 / 0.8);
 }
 
-.hover\:bg-primColor\/80:hover {
-  background-color: rgb(56 74 173 / 0.8);
-}
-
 .hover\:bg-sky-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
@@ -1925,33 +1684,26 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:shadow-sm:hover {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-<<<<<<< Updated upstream
-.hover\:shadow-rounded-xl:hover {
-  --tw-shadow: 0px 0px 25px -5px rgba(0, 0, 0, 0.3);
-  --tw-shadow-colored: 0px 0px 25px -5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-rounded-md:hover {
   --tw-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.1);
   --tw-shadow-colored: 0px 0px 8px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-sm:hover {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
-=======
+}
+
 .focus\:border-blue-600:focus {
   --tw-border-opacity: 1;
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
->>>>>>> Stashed changes
 }
 
 .focus\:border-sky-500:focus {
@@ -1976,7 +1728,6 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-<<<<<<< Updated upstream
 }
 
 .focus\:ring-1:focus {
@@ -1988,14 +1739,6 @@ video {
 .focus\:ring-blue-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
-=======
->>>>>>> Stashed changes
-}
-
-.focus\:ring-1:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .focus\:ring-sky-500:focus {
@@ -2107,6 +1850,11 @@ video {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
+  .dark\:focus\:border-blue-500:focus {
+    --tw-border-opacity: 1;
+    border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  }
+
   .peer:focus ~ .peer-focus\:dark\:text-blue-500 {
     --tw-text-opacity: 1;
     color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -2172,7 +1920,6 @@ video {
     display: none;
   }
 
-<<<<<<< Updated upstream
   .mini\:h-\[70vh\] {
     height: 70vh;
   }
@@ -2223,10 +1970,6 @@ video {
 
   .mini\:gap-y-8 {
     row-gap: 2rem;
-=======
-  .mini\:min-w-\[300px\] {
-    min-width: 300px;
->>>>>>> Stashed changes
   }
 
   .mini\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
