--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -792,10 +792,6 @@ video {
   z-index: 1000;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -814,16 +810,6 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
 .mb-4 {
@@ -856,26 +842,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .block {
@@ -934,8 +900,16 @@ video {
   height: 0.05rem;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .h-\[60vh\] {
   height: 60vh;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-max {
@@ -945,38 +919,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-\[330px\] {
-  height: 330px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
-.min-h-full {
-  min-height: 100%;
-}
-
-.min-h-0 {
-  min-height: 0px;
 }
 
 .w-1\/2 {
@@ -999,10 +941,6 @@ video {
   width: 2.5rem;
 }
 
-.w-11 {
-  width: 2.75rem;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -1023,6 +961,10 @@ video {
   width: 7rem;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .w-3\/5 {
   width: 60%;
 }
@@ -1035,12 +977,20 @@ video {
   width: 11rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-7 {
@@ -1055,6 +1005,10 @@ video {
   width: 2.25rem;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1064,40 +1018,8 @@ video {
   width: max-content;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-\[330px\] {
-  width: 330px;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.min-w-0 {
-  min-width: 0px;
-}
-
 .max-w-xl {
   max-width: 36rem;
-}
-
-.shrink-0 {
-  flex-shrink: 0;
 }
 
 .origin-\[0\] {
@@ -1170,10 +1092,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-end {
   justify-content: flex-end;
 }
@@ -1190,36 +1108,28 @@ video {
   justify-content: space-evenly;
 }
 
-.gap-7 {
-  gap: 1.75rem;
+.gap-12 {
+  gap: 3rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-4 {
-  gap: 1rem;
+.gap-16 {
+  gap: 4rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-0 {
-  gap: 0px;
+.gap-4 {
+  gap: 1rem;
 }
 
-.gap-12 {
-  gap: 3rem;
+.gap-7 {
+  gap: 1.75rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
-.gap-16 {
-  gap: 4rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-y-3 {
@@ -1313,10 +1223,6 @@ video {
   overflow-y: auto;
 }
 
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1395,6 +1301,26 @@ video {
   border-left-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.bg-\[\#E8EAF5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 234 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FED9A5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 217 165 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#bcc2e3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 194 227 / var(--tw-bg-opacity));
+}
+
+.bg-blue-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1430,29 +1356,6 @@ video {
 
 .bg-white\/70 {
   background-color: rgb(255 255 255 / 0.7);
-}
-
-.bg-\[\#bcc2e3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(188 194 227 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#E8EAF5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 234 245 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#FED9A5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 217 165 / var(--tw-bg-opacity));
-}
-
-.bg-\[url\(https\:\/\/file\.rendit\.io\/n\/2JR0ngGhLJSOKJuiiqSk\.svg\)\] {
-  background-image: url(https://file.rendit.io/n/2JR0ngGhLJSOKJuiiqSk.svg);
-}
-
-.bg-cover {
-  background-size: cover;
 }
 
 .p-3 {
@@ -1510,6 +1413,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1523,11 +1431,6 @@ video {
 .py-9 {
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .pb-2 {
@@ -1550,6 +1453,10 @@ video {
   padding-left: 0.5rem;
 }
 
+.pl-56 {
+  padding-left: 14rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1570,52 +1477,16 @@ video {
   padding-top: 1.5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pl-0 {
-  padding-left: 0px;
-}
-
-.pl-0\.5 {
-  padding-left: 0.125rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-48 {
-  padding-left: 12rem;
-}
-
-.pl-56 {
-  padding-left: 14rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-nunito {
@@ -1628,10 +1499,6 @@ video {
 
 .font-pt {
   font-family: 'PT Sans', sans-serif;
-}
-
-.font-\[\'Barlow\'\] {
-  font-family: 'Barlow';
 }
 
 .text-2xl {
@@ -1647,6 +1514,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-\[\.7rem\] {
@@ -1678,16 +1550,6 @@ video {
   line-height: 1rem;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1704,8 +1566,8 @@ video {
   font-weight: 600;
 }
 
-.font-light {
-  font-weight: 300;
+.leading-\[25\.7px\] {
+  line-height: 25.7px;
 }
 
 .leading-\[28\.7px\] {
@@ -1716,56 +1578,16 @@ video {
   line-height: 34.5px;
 }
 
-.leading-\[2\.7px\] {
-  line-height: 2.7px;
-}
-
-.leading-\[25\.7px\] {
-  line-height: 25.7px;
-}
-
-.tracking-\[2\.9\] {
-  letter-spacing: 2.9;
-}
-
-.tracking-\[2\] {
-  letter-spacing: 2;
-}
-
-.tracking-\[2\.5\] {
-  letter-spacing: 2.5;
-}
-
-.tracking-\[2\.5p\] {
-  letter-spacing: 2.5p;
+.tracking-\[1\.7px\] {
+  letter-spacing: 1.7px;
 }
 
 .tracking-\[2\.5px\] {
   letter-spacing: 2.5px;
 }
 
-.tracking-\[2\.px\] {
-  letter-spacing: 2.px;
-}
-
-.tracking-\[2\.3px\] {
-  letter-spacing: 2.3px;
-}
-
-.tracking-\[2px\] {
-  letter-spacing: 2px;
-}
-
-.tracking-\[1px\] {
-  letter-spacing: 1px;
-}
-
-.tracking-\[1\.px\] {
-  letter-spacing: 1.px;
-}
-
-.tracking-\[1\.7px\] {
-  letter-spacing: 1.7px;
+.tracking-\[2\.9\] {
+  letter-spacing: 2.9;
 }
 
 .text-\[\#0B8826\] {
@@ -1847,11 +1669,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#E8EAF5\] {
-  --tw-text-opacity: 1;
-  color: rgb(232 234 245 / var(--tw-text-opacity));
-}
-
 .placeholder-slate-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(148 163 184 / var(--tw-placeholder-opacity));
@@ -1868,10 +1685,6 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
-}
-
-.bg-blend-normal {
-  background-blend-mode: normal;
 }
 
 .shadow-md {
@@ -1901,12 +1714,6 @@ video {
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0px_0px_3px_1px_rgba\(0\2c _0\2c _0\2c _0\.4\)\] {
-  --tw-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.4);
-  --tw-shadow-colored: 0px 0px 3px 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
