--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -1573,6 +1573,11 @@ input[type="range"]::-ms-fill-lower {
   margin-bottom: 0.25rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -1583,9 +1588,19 @@ input[type="range"]::-ms-fill-lower {
   margin-bottom: 1.5rem;
 }
 
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+
 .my-\[5px\] {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .-mt-3 {
@@ -1616,8 +1631,20 @@ input[type="range"]::-ms-fill-lower {
   margin-bottom: 0.625rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mb-7 {
@@ -1738,6 +1765,10 @@ input[type="range"]::-ms-fill-lower {
 
 .mt-\[0\.15rem\] {
   margin-top: 0.15rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .box-border {
@@ -2198,6 +2229,10 @@ input[type="range"]::-ms-fill-lower {
   width: 100vw;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -2227,6 +2262,10 @@ input[type="range"]::-ms-fill-lower {
   min-width: max-content;
 }
 
+.min-w-\[15rem\] {
+  min-width: 15rem;
+}
+
 .max-w-\[200px\] {
   max-width: 200px;
 }
@@ -2253,6 +2292,10 @@ input[type="range"]::-ms-fill-lower {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .flex-auto {
@@ -3081,6 +3124,11 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgb(156 163 175 / 0.7);
 }
 
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
 .border-neutral-100 {
   --tw-border-opacity: 1;
   border-color: rgb(245 245 245 / var(--tw-border-opacity));
@@ -3116,6 +3164,11 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
+.border-slate-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(100 116 139 / var(--tw-border-opacity));
+}
+
 .border-transparent {
   border-color: transparent;
 }
@@ -3123,6 +3176,21 @@ input[type="range"]::-ms-fill-lower {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 159 110 / var(--tw-border-opacity));
+}
+
+.border-blue-50 {
+  --tw-border-opacity: 1;
+  border-color: rgb(235 245 255 / var(--tw-border-opacity));
+}
+
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(63 131 248 / var(--tw-border-opacity));
 }
 
 .border-l-gray-200 {
@@ -3461,6 +3529,11 @@ input[type="range"]::-ms-fill-lower {
   padding-right: 0.125rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -3747,6 +3820,10 @@ input[type="range"]::-ms-fill-lower {
 
 .text-start {
   text-align: start;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .align-middle {
@@ -4559,6 +4636,64 @@ input[type="range"]::-ms-fill-lower {
 }
 
 @media (min-width: 900px) {
+  .mini\:container {
+    width: 100%;
+  }
+
+  @media (min-width: 320px) {
+    .mini\:container {
+      max-width: 320px;
+    }
+  }
+
+  @media (min-width: 500px) {
+    .mini\:container {
+      max-width: 500px;
+    }
+  }
+
+  @media (min-width: 640px) {
+    .mini\:container {
+      max-width: 640px;
+    }
+  }
+
+  @media (min-width: 700px) {
+    .mini\:container {
+      max-width: 700px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .mini\:container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 900px) {
+    .mini\:container {
+      max-width: 900px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .mini\:container {
+      max-width: 1024px;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .mini\:container {
+      max-width: 1280px;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .mini\:container {
+      max-width: 1536px;
+    }
+  }
+
   .mini\:admin__layout {
     display: grid;
     grid-template-columns: 1fr;
@@ -4697,6 +4832,11 @@ input[type="range"]::-ms-fill-lower {
 .checked\:bg-primary:checked {
   --tw-bg-opacity: 1;
   background-color: rgb(59 113 202 / var(--tw-bg-opacity));
+}
+
+.checked\:bg-primColor:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 74 173 / var(--tw-bg-opacity));
 }
 
 .checked\:before\:opacity-\[0\.16\]:checked::before {
@@ -4846,6 +4986,11 @@ input[type="range"]::-ms-fill-lower {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:fill-\[\#8b8b8b\]:hover {
@@ -5897,6 +6042,10 @@ input[type="range"]::-ms-fill-lower {
   border-width: 0px;
 }
 
+:is(.dark .dark\:border) {
+  border-width: 1px;
+}
+
 :is(.dark .dark\:border-gray-600) {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
@@ -6047,6 +6196,11 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(255 255 255 / 0.1);
 }
 
+:is(.dark .dark\:hover\:bg-gray-700:hover) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:hover\:fill-gray-100:hover) {
   fill: #F3F4F6;
 }
@@ -6064,6 +6218,11 @@ input[type="range"]::-ms-fill-lower {
 :is(.dark .dark\:hover\:text-white:hover) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:hover\:text-gray-300:hover) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:focus\:border-blue-500:focus) {
@@ -6216,6 +6375,10 @@ input[type="range"]::-ms-fill-lower {
     flex-direction: row;
   }
 
+  .ipad\:justify-end {
+    justify-content: flex-end;
+  }
+
   .ipad\:gap-x-6 {
     -moz-column-gap: 1.5rem;
          column-gap: 1.5rem;
@@ -6251,13 +6414,70 @@ input[type="range"]::-ms-fill-lower {
     display: block;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-\[250px\] {
+    height: 250px;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:h-screen {
+    height: 100vh;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
+  .md\:w-\[250px\] {
+    width: 250px;
+  }
+
+  .md\:max-w-4xl {
+    max-width: 56rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:gap-9 {
+    gap: 2.25rem;
   }
 
   .md\:gap-x-4 {
     -moz-column-gap: 1rem;
          column-gap: 1rem;
+  }
+
+  .md\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 
   .md\:text-sm {
@@ -6293,6 +6513,16 @@ input[type="range"]::-ms-fill-lower {
 
   .mini\:order-2 {
     order: 2;
+  }
+
+  .mini\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .mini\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .mini\:mb-0 {
@@ -6380,8 +6610,16 @@ input[type="range"]::-ms-fill-lower {
     flex-direction: row;
   }
 
+  .mini\:justify-end {
+    justify-content: flex-end;
+  }
+
   .mini\:justify-between {
     justify-content: space-between;
+  }
+
+  .mini\:gap-12 {
+    gap: 3rem;
   }
 
   .mini\:gap-5 {
@@ -6524,6 +6762,10 @@ input[type="range"]::-ms-fill-lower {
 
   .mini\:pt-5 {
     padding-top: 1.25rem;
+  }
+
+  .mini\:pl-36 {
+    padding-left: 9rem;
   }
 
   .mini\:text-left {
