--- a/Petrol station/src/assets/css/output.css
+++ b/Petrol station/src/assets/css/output.css
@@ -1458,6 +1458,10 @@ input[type="range"]::-ms-fill-lower {
   z-index: 50;
 }
 
+.z-\[1000000000000\] {
+  z-index: 1000000000000;
+}
+
 .z-\[1000000\] {
   z-index: 1000000;
 }
@@ -1488,6 +1492,30 @@ input[type="range"]::-ms-fill-lower {
 
 .z-\[999\] {
   z-index: 999;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
+.z-\[5000\] {
+  z-index: 5000;
+}
+
+.z-\[10000\] {
+  z-index: 10000;
+}
+
+.z-\[1000000000\] {
+  z-index: 1000000000;
+}
+
+.z-\[9000\] {
+  z-index: 9000;
 }
 
 .order-1 {
@@ -1750,6 +1778,10 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 0.15rem;
 }
 
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1987,6 +2019,10 @@ input[type="range"]::-ms-fill-lower {
   height: 100vh;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
 .max-h-\[calc\(100\%-64px\)\] {
   max-height: calc(100% - 64px);
 }
@@ -2204,6 +2240,10 @@ input[type="range"]::-ms-fill-lower {
   width: 100vw;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -2259,6 +2299,14 @@ input[type="range"]::-ms-fill-lower {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .flex-auto {
@@ -2493,6 +2541,26 @@ input[type="range"]::-ms-fill-lower {
 
 .animate-\[show-up-clock_350ms_linear\] {
   animation: show-up-clock 350ms linear;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .cursor-default {
@@ -3310,6 +3378,10 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(0 0 0 / 0.1);
 }
 
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
+}
+
 .bg-black\/40 {
   background-color: rgb(0 0 0 / 0.4);
 }
@@ -3432,6 +3504,10 @@ input[type="range"]::-ms-fill-lower {
 
 .fill-\[\#afafaf\] {
   fill: #afafaf;
+}
+
+.fill-blue-600 {
+  fill: #1C64F2;
 }
 
 .fill-white {
@@ -4103,6 +4179,11 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(79 79 79 / var(--tw-text-opacity));
 }
 
+.text-\[\#575757\] {
+  --tw-text-opacity: 1;
+  color: rgb(87 87 87 / var(--tw-text-opacity));
+}
+
 .text-\[\#A6A096\] {
   --tw-text-opacity: 1;
   color: rgb(166 160 150 / var(--tw-text-opacity));
@@ -4158,6 +4239,11 @@ input[type="range"]::-ms-fill-lower {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .text-gray-200 {
@@ -4257,11 +4343,6 @@ input[type="range"]::-ms-fill-lower {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#575757\] {
-  --tw-text-opacity: 1;
-  color: rgb(87 87 87 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -4668,6 +4749,16 @@ input[type="range"]::-ms-fill-lower {
   background-color: transparent;
 }
 
+.placeholder\:text-gray-400::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-400::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .before\:pointer-events-none::before {
   content: var(--tw-content);
   pointer-events: none;
@@ -4950,6 +5041,11 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(14 159 110 / var(--tw-text-opacity));
 }
 
+.hover\:text-primColor:hover {
+  --tw-text-opacity: 1;
+  color: rgb(56 74 173 / var(--tw-text-opacity));
+}
+
 .hover\:text-primColor\/80:hover {
   color: rgb(56 74 173 / 0.8);
 }
@@ -4962,11 +5058,6 @@ input[type="range"]::-ms-fill-lower {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-primColor:hover {
-  --tw-text-opacity: 1;
-  color: rgb(56 74 173 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -6110,6 +6201,16 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+:is(.dark .dark\:text-gray-600) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-700) {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 :is(.dark .dark\:placeholder\:text-gray-200)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -6407,6 +6508,10 @@ input[type="range"]::-ms-fill-lower {
          column-gap: 1rem;
   }
 
+  .md\:p-6 {
+    padding: 1.5rem;
+  }
+
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -6449,6 +6554,11 @@ input[type="range"]::-ms-fill-lower {
 
   .mini\:order-2 {
     order: 2;
+  }
+
+  .mini\:mx-5 {
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
   }
 
   .mini\:mx-auto {
